--- a/vagrantfile
+++ b/vagrantfile
@@ -6,46 +6,6 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 443, host: 8002, id: 'https', auto_correct: true
   config.ssh.insert_key = false
 
-  config.vm.define "ubuntu" do |box|
-    #######################################
-    name = "ubuntu"
-    ext = "local"
-    os = "ubuntu/bionic64"
-    php = 72
-    gituser = "Tom Sheppard"
-    gitemail = "sheppardnexus@gmail.com"
-    subdomain = "www"
-    #######################################
-    box.vm.box = os
-    box.vm.hostname = name
-    box.vm.synced_folder "../" + name + "/", "/var/www/",  owner: "root", group: "root", mount_options: ["dmode=777", "fmode=666"]
-    box.vm.provision "shell", path: "provision.sh", privileged: false, :args => [name, ext, os, php, gituser, gitemail, subdomain]
-    box.vm.provision "shell", path: "boot.sh", privileged: false, :args => [name, ext, os, php, gituser, gitemail, subdomain], run: "always"
-    box.vm.provider "virtualbox" do |virtualbox|
-      virtualbox.name = name
-    end
-  end
-
-  config.vm.define "dinosaurs" do |box|
-    #######################################
-    name = "dinosaurs"
-    ext = "local"
-    os = "centos/7"
-    php = 72
-    gituser = "Tom Sheppard"
-    gitemail = "sheppardnexus@gmail.com"
-    subdomain = "www"
-    #######################################
-    box.vm.box = os
-    box.vm.hostname = name
-    box.vm.synced_folder "../" + name + "/", "/var/www/", owner: "root", group: "root", mount_options: ["dmode=777", "fmode=666"]
-    box.vm.provision "shell", path: "provision.sh", privileged: false, :args => [name, ext, os, php, gituser, gitemail, subdomain]
-    box.vm.provision "shell", path: "boot.sh", privileged: false, :args => [name, ext, os, php, gituser, gitemail, subdomain], run: "always"
-    box.vm.provider "virtualbox" do |virtualbox|
-      virtualbox.name = name
-    end
-  end
-
   config.vm.define "laravel" do |box|
     #######################################
     name = "laravel"
@@ -53,11 +13,10 @@ Vagrant.configure("2") do |config|
     os = "centos/7"
     php = 72
     gituser = "Tom Sheppard"
-    gitemail = "sheppardnexus@gmail.com"
+    gitemail = "tomsheppard@email.com"
     subdomain = "www"
     #######################################
     box.vm.box = os
-    box.vm.box_version = "1804.02"
     box.vm.hostname = name
     box.vm.synced_folder "../" + name + "/", "/var/www/", owner: "root", group: "root", mount_options: ["dmode=777", "fmode=666"]
     box.vm.provision "shell", path: "provision.sh", privileged: false, :args => [name, ext, os, php, gituser, gitemail, subdomain]
