--- a/vagrantfile
+++ b/vagrantfile
@@ -11,16 +11,17 @@ Vagrant.configure("2") do |config|
     name = "laravel"
     ext = "local"
     os = "centos/7"
-    php = 72
-    gituser = "Tom Sheppard"
+    php = 73
+    gitname = "Tom Sheppard"
     gitemail = "tomsheppard@email.com"
+    gituser = "tjsheppard"
     subdomain = "www"
     #######################################
     box.vm.box = os
     box.vm.hostname = name
     box.vm.synced_folder "../" + name + "/", "/var/www/", owner: "root", group: "root", mount_options: ["dmode=777", "fmode=666"]
-    box.vm.provision "shell", path: "provision.sh", privileged: false, :args => [name, ext, os, php, gituser, gitemail, subdomain]
-    box.vm.provision "shell", path: "boot.sh", privileged: false, :args => [name, ext, os, php, gituser, gitemail, subdomain], run: "always"
+    box.vm.provision "shell", path: "provision.sh", privileged: false, :args => [name, ext, os, php, gitname, gitemail, gituser, subdomain]
+    box.vm.provision "shell", path: "boot.sh", privileged: false, :args => [name, ext, os, php, gitname, gitemail, gituser, subdomain], run: "always"
     box.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = name
     end
